# HDSC

./: .gitignore  pyproject.toml  requirements.txt
src/hdsc/: main.py
src/hdsc/static/css/: style.css
src/hdsc/templates/: about.html  base.html  contact.html  donate.html  events.html  home.html  membership.html  news.html
